# codesmith

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
codesmith/: __init__.py  __main__.py  auth.py  bot.py  config.py  output_parser.py  pty_handler.py  sandbox_runner.py  session_manager.py  status_embed.py  stream_bot.py  stream_handler.py  stream_parser.py  stream_session_manager.py
scripts/: setup_vps.sh
